# gym-motion

./: .env.example  .gitignore  AGENTS.md  PREVIOUS_BUGS.md  README.md  bunfig.toml  drizzle.config.ts  electron-builder.config.mjs  electron.vite.config.ts  eslint.config.mjs  package.json  playwright.desktop.config.ts  railway.json  tsconfig.json  tsconfig.runtime.json  tsconfig.scripts.json  turbo.json  vitest.config.ts  vitest.db.config.ts
backend/: storage-bucket.ts
docs/: desktop-architecture.md  desktop-code-map.md  development-environments.md  movement-analytics.md  testing-from-wsl.md  testing-on-windows.md  windows-movement-analytics-vision.md
drizzle/: 0000_initial_schema.sql
firmware/: firmware.ino  json_object_reader.hpp  motion_sensor.ino  ota_runtime.ino  platformio.ini  (+7 more)
native/windows-ble-sidecar/: Cargo.toml
native/windows-ble-sidecar/src/: json_decoder.rs  main.rs  non_windows.rs  protocol.rs
native/windows-ble-sidecar/src/windows/: approval.rs  config.rs  core_impl.rs  discovery.rs  handshake.rs  mod.rs  registry.rs  session.rs  session_command.rs  session_connection.rs  session_event.rs  session_lease.rs  session_scan.rs  session_transport.rs  session_transport_history.rs  session_transport_monitor.rs  session_transport_monitor_helpers.rs  session_transport_monitor_reporting.rs  session_transport_prepare_io.rs  session_transport_recovery.rs  session_transport_setup.rs  session_types.rs  session_util.rs  tests.rs  winrt_adapter.rs  writer.rs
native/windows-ble-sidecar/src/windows/tests/: candidate_identity.rs  control_frames.rs  discovery.rs  recovery.rs  scan_policy.rs
(+447 files in other folders)
