[package]
name = "gym-motion-windows-ble-sidecar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gym-motion-ble-winrt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.47.1", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[target.'cfg(target_os = "windows")'.dependencies]
btleplug = { path = "vendor/btleplug-winrt-patched" }
windows = { version = "0.62.1", features = [
  "Devices_Bluetooth",
  "Devices_Bluetooth_Advertisement",
  "Devices_Bluetooth_GenericAttributeProfile",
  "Devices_Enumeration",
  "Devices_Radios",
  "Foundation",
  "Storage_Streams",
] }
